build. properties, gradle 설정 변경

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,20 +3,19 @@ spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
-logging.level.org.springframework=DEBUG
+#????
+#???? DEBUG
+logging.level.org.springframework=INFO
+
 app.s3.bucket-name=${S3_BUCKET_NAME}
 
+spring.security.debug=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
-# ??? OAuth2 ????? ??
-spring.security.oauth2.client.registration.kakao.client-id=${KAKAO_CLIENT_ID}
-spring.security.oauth2.client.registration.kakao.client-secret=${KAKAO_CLIENT_SECRET}
-spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.kakao.redirect-uri={baseUrl}/login/oauth2/code/kakao
-spring.security.oauth2.client.registration.kakao.scope=profile_nickname,account_email
 
-spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
-spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
-spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
-spring.security.oauth2.client.provider.kakao.user-name-attribute=id
+kakao.client-id=${KAKAO_CLIENT_ID}
+kakao.client-secret=${KAKAO_CLIENT_SECRET}
+kakao.redirect-uri=${KAKAO_REDIRECT_URL}/login/oauth2/code/kakao
+
+server.servlet.session.cookie.same-site=None
