fix : tourapi url, service key추가

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -19,3 +19,6 @@ kakao.client-secret=${KAKAO_CLIENT_SECRET}
 kakao.redirect-uri=${KAKAO_REDIRECT_URL}/login/oauth2/code/kakao
 
 server.servlet.session.cookie.same-site=None
+
+tourapi.url=${TOUR_API_URL}
+tourapi.service-key=${TOUR_API_SERVICE_KEY}
