--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,10 @@ dependencies {
 
     // swagger-ui
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
+
+    
+    // json
+    implementation 'org.json:json:20240303'
 }
 
 
