--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -271,7 +271,7 @@ jobs:
         
     - name: Deploy with Blue-Green strategy
       run: |
-        ssh -i ~/.ssh/deploy_key ec2-user@${{ env.EC2_HOST }} << 'EOF'
+        ssh -i ~/.ssh/deploy_key.pem ec2-user@${{ env.EC2_HOST }} << 'EOF'
           set -e
           
           # GitHub Container Registry 로그인 (필요시)
