--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,10 +16,10 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.messages.basename=errors
 spring.messages.encoding=UTF-8
 # for test
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.h2.console.enabled=true
+# spring.datasource.url=jdbc:h2:mem:testdb
+# spring.datasource.driverClassName=org.h2.Driver
+# spring.datasource.username=sa
+# spring.datasource.password=
+# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# spring.jpa.hibernate.ddl-auto=create-drop
+# spring.h2.console.enabled=true
