--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,5 @@ spring.messages.encoding=UTF-8
 # spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # spring.jpa.hibernate.ddl-auto=create-drop
 # spring.h2.console.enabled=true
+
+management.endpoints.web.exposure.include=*
