--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -339,7 +339,7 @@ jobs:
           done
           
           # Nginx 설정 업데이트 (포트 전환) - Docker 버전
-          sudo docker exec nginx-proxy sed -i "s/server host\.docker\.internal:[0-9]*;/server host.docker.internal:$INACTIVE_PORT;/g" /etc/nginx/conf.d/app.conf
+          sudo docker exec nginx-proxy sed -i "s/server host\.docker\.internal:[0-9]*;/server host.docker.internal:$INACTIVE_PORT;/g" /etc/nginx/conf.d/default.conf
           sudo docker exec nginx-proxy nginx -t && sudo docker exec nginx-proxy nginx -s reload
           
           # 이전 활성 컨테이너를 잠시 유지 (롤백용)
