--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,4 @@ spring.messages.encoding=UTF-8
 # spring.h2.console.enabled=true
 
 management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
