--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,7 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
 
     // 테스트용 H2 추가
-    // testImplementation 'com.h2database:h2'
+    testImplementation 'com.h2database:h2'
 }
 
 
