feat: application-test.properties

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,8 +1,29 @@
-# for test
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
+# H2
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+
+# JPA
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.h2.console.enabled=true
+spring.jpa.show-sql=false
+
+# H2
+spring.h2.console.enabled=false
+
+# 
+logging.level.org.springframework=WARN
+logging.level.org.hibernate=WARN
+
+# 
+app.s3.bucket-name=test-bucket
+kakao.client-id=test-client-id
+kakao.client-secret=test-client-secret
+kakao.redirect-uri=http://localhost:8080/test
+
+# jwt for test
+jwt.secret=test-jwt-secret-key-for-testing-only-minimum-256-bits
+
+# security
+spring.security.debug=false
