--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # JPA ??
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.messages.basename=errors
+spring.messages.basename=errors, validation
 spring.messages.encoding=UTF-8
