--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -87,7 +87,7 @@ jobs:
   build-and-publish:
     needs: test
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/OSAEK-CI-CD-TEST' || github.event_name == 'release'
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/OSAEK-CI-CD-TEST' || github.event_name == 'release'
     
     permissions:
       contents: read
@@ -577,6 +577,8 @@ jobs:
         - **App**: <$APP_URL>
         - **Docker**: \`$IMAGE\`
         - **Commit**: <$COMMIT_URL>"
+        elif [ "$STATUS" = "skipped" ]; then
+          MESSAGE="⏭️ **Deployment Skipped** (no matching conditions)."
         else
           MESSAGE="❌ **Deployment Failed!**
         - **Branch**: \`$BRANCH\`
