--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,8 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.messages.basename=errors, validation
 spring.messages.encoding=UTF-8
+# Health endpoint activate
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=always
+management.endpoint.health.enabled=true
+
