--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -440,21 +440,59 @@ jobs:
             sleep 5
           done
           
-          # Nginx 설정 업데이트 (기존 코드와 동일)
-          echo "🔄 Updating Nginx configuration..."
+          # 현재 설정 확인
+          echo "📋 Current nginx config:"
+          sudo docker exec nginx-proxy cat /etc/nginx/conf.d/default.conf | grep -A2 -B2 "server.*:"
+
+          # EC2 내부 IP 주소 확인
           HOST_IP=$(hostname -I | awk '{print $1}')
           echo "🌐 Host IP: $HOST_IP"
-          
-          sudo docker exec nginx-proxy sed -i "s/host\.docker\.internal/$HOST_IP/g" /etc/nginx/conf.d/default.conf || echo "No host.docker.internal found"
-          sudo docker exec nginx-proxy sed -i "s/$HOST_IP:[0-9]*/$HOST_IP:$INACTIVE_PORT/g" /etc/nginx/conf.d/default.conf || echo "Port update failed"
-          
+
+          # 더 정확한 포트 업데이트
+          echo "🔧 Updating upstream server to $HOST_IP:$INACTIVE_PORT..."
+
+          # upstream 블록의 server 라인을 업데이트
+          sudo docker exec nginx-proxy sed -i "s|server [^;]*;|server $HOST_IP:$INACTIVE_PORT;|g" /etc/nginx/conf.d/default.conf
+
+          # 또는 더 안전한 방법으로 특정 라인만 교체
+          sudo docker exec nginx-proxy sed -i "/upstream app {/,/}/ s|server [^;]*;|server $HOST_IP:$INACTIVE_PORT;|g" /etc/nginx/conf.d/default.conf
+
+          # 변경 후 설정 확인
+          echo "📋 Updated nginx config:"
+          sudo docker exec nginx-proxy cat /etc/nginx/conf.d/default.conf | grep -A2 -B2 "server.*:"
+
+          # Nginx 테스트 및 재로드
+          echo "🧪 Testing nginx configuration..."
           if sudo docker exec nginx-proxy nginx -t; then
-            sudo docker exec nginx-proxy nginx -s reload
-            echo "✅ Nginx reloaded successfully: $HOST_IP:$INACTIVE_PORT"
+            echo "✅ Nginx config test passed"
+            if sudo docker exec nginx-proxy nginx -s reload; then
+              echo "✅ Nginx reloaded successfully: $HOST_IP:$INACTIVE_PORT"
+            else
+              echo "⚠️ Nginx reload failed, restarting container..."
+              sudo docker restart nginx-proxy
+              sleep 5
+              echo "🔄 Nginx restarted"
+            fi
           else
-            echo "⚠️ Nginx config test failed, restarting..."
+            echo "❌ Nginx config test failed!"
+            echo "📋 Current config:"
+            sudo docker exec nginx-proxy cat /etc/nginx/conf.d/default.conf
+            echo "🔄 Restarting nginx anyway..."
             sudo docker restart nginx-proxy
             sleep 5
+          fi
+
+          # 최종 확인
+          echo "🔍 Final nginx upstream check:"
+          sudo docker exec nginx-proxy cat /etc/nginx/conf.d/default.conf | grep "server.*$HOST_IP" || echo "❌ Update may have failed"
+
+          # 연결 테스트
+          echo "🌐 Testing connection through nginx:"
+          if curl -f -s http://localhost/ > /dev/null 2>&1; then
+            echo "✅ Nginx proxy working correctly"
+          else
+            echo "⚠️ Nginx proxy not responding - checking port 80"
+            curl -v http://localhost/ 2>&1 | head -10
           fi
           
           # 최종 상태 확인
