feat: 스토리 물리적 삭제 스케줄러 구현 및 로깅 레벨 설정

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,23 +2,17 @@
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
-
 #????
 #???? DEBUG
-logging.level.org.springframework=INFO
-
+logging.level.root=INFO
+logging.level.com.oseak.myFestaBackend=DEBUG
 app.s3.bucket-name=${S3_BUCKET_NAME}
-
 spring.security.debug=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
-
-
 kakao.client-id=${KAKAO_CLIENT_ID}
 kakao.client-secret=${KAKAO_CLIENT_SECRET}
 kakao.redirect-uri=${KAKAO_REDIRECT_URL}/login/oauth2/code/kakao
-
 server.servlet.session.cookie.same-site=None
-
 tourapi.url=${TOUR_API_URL}
 tourapi.service-key=${TOUR_API_SERVICE_KEY}
