feat : 스토리 이미지, 동영상 썸네일 s3 저장
- 이미지 동기적으로 썸네일 생성 및 s3저장 완료
- 동영상 동기적으로 정적 썸네일 생성 및 s3 저장 완료
- 추후 비동기적으로 구현해야함.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,24 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.messages.basename=errors, validation
 spring.messages.encoding=UTF-8
+
+# \uc368\ub124\uc77c \uc124\uc815
+app.thumbnail.temp-dir=${java.io.tmpdir}/thumbnails
+
+# \ubbf8\ub514\uc5b4 \uc555\ucd95 \uc124\uc815
+app.media.max-original-size=52428800
+app.media.compression-quality=25
+
+# \ube44\ub3d9\uae30 \ucc98\ub9ac \uc124\uc815
+spring.task.execution.pool.core-size=2
+spring.task.execution.pool.max-size=10
+spring.task.execution.pool.queue-capacity=100
+
+# 파일 업로드 크기 제한 (Spring Boot 기본 설정)
+spring.servlet.multipart.max-file-size=500MB
+spring.servlet.multipart.max-request-size=500MB
+
+# 디버깅을 위한 로그 레벨 설정
+logging.level.com.oseak.myFestaBackend.config.filter.JwtAuthenticationFilter=DEBUG
+logging.level.com.oseak.myFestaBackend.common.util.SecurityUtil=DEBUG
+logging.level.com.oseak.myFestaBackend.controller.StoryController=DEBUG
