--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,7 +6,10 @@ spring.datasource.password=${DB_PASSWORD}
 #???? DEBUG
 logging.level.root=INFO
 logging.level.com.oseak.myFestaBackend=DEBUG
-app.s3.bucket-name=${S3_BUCKET_NAME}
+aws.s3.bucket=${S3_BUCKET_NAME}
+aws.s3.access-key=${S3_ACCESS_KEY}
+aws.s3.secret-key=${S3_SECRET_KEY}
+aws.s3.region=${S3_REGION}
 spring.security.debug=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
