--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -11,6 +11,9 @@ aws.s3.access-key=${S3_ACCESS_KEY}
 aws.s3.secret-key=${S3_SECRET_KEY}
 aws.s3.region=${S3_REGION}
 spring.security.debug=true
+jwt.secret=${JWT_SECRET}
+jwt.expiration.access-token=${JWT_EXPIRATION_ACCESS_TOKEN}
+jwt.expiration.refresh-token=${JWT_EXPIRATION_REFRESH_TOKEN}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 kakao.client-id=${KAKAO_CLIENT_ID}
