--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -35,6 +35,10 @@ env:
   DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
   TOUR_API_URL: ${{ secrets.TOUR_API_URL}}
   TOUR_API_SERVICE_KEY: ${{ secrets.TOUR_API_SERVICE_KEY }}
+  S3_ACCESS_KEY: ${{ S3_ACCESS_KEY }}
+  S3_BUCKET_NAME: ${{ S3_BUCKET_NAME }}
+  S3_REGION: ${{ S3_REGION }}
+  S3_SECRET_KEY: ${{ S3_SECRET_KEY }}
 
 jobs:
   test:
