feat: application.properties 수정
- 스웨거를 위한 설정 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ springdoc.swagger-ui.operations-sorter=alpha
 springdoc.swagger-ui.tags-sorter=alpha
 springdoc.default-produces-media-type=application/json
 springdoc.default-consumes-media-type=application/json
+server.forward-headers-strategy=NATIVE
 # 데이터베이스 설정
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # JPA 설정
