add: redirect url 추가

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -19,6 +19,7 @@ spring.jpa.show-sql=false
 kakao.client-id=${KAKAO_CLIENT_ID}
 kakao.client-secret=${KAKAO_CLIENT_SECRET}
 kakao.redirect-uri=${KAKAO_REDIRECT_URL}/login/oauth2/code/kakao
+kakao.frontend-redirect-uri=${KAKAO_FRONTEND_REDIRECT_URL}/auth/kakao/callback
 server.servlet.session.cookie.same-site=None
 tourapi.url=${TOUR_API_URL}
 tourapi.service-key=${TOUR_API_SERVICE_KEY}
