feat: 프론트엔드에서 카카오 로그인 code 전달 → 백엔드 토큰 교환 방식으로 변경, 로그 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,10 +31,8 @@ spring.task.execution.pool.queue-capacity=100
 # 파일 업로드 크기 제한 (Spring Boot 기본 설정)
 spring.servlet.multipart.max-file-size=500MB
 spring.servlet.multipart.max-request-size=500MB
-# 디버깅을 위한 로그 레벨 설정
-logging.level.com.oseak.myFestaBackend.config.filter.JwtAuthenticationFilter=DEBUG
-logging.level.com.oseak.myFestaBackend.common.util.SecurityUtil=DEBUG
-logging.level.com.oseak.myFestaBackend.controller.StoryController=DEBUG
+# 로그 설정은 logback-spring.xml에서 관리
+logging.level.com.oseak.myFestaBackend=INFO 
 # 헬스 엔드포인트
 management.endpoints.web.exposure.include=health
 management.endpoint.health.show-details=always
