--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,10 @@ configurations {
     compileOnly {
         extendsFrom annotationProcessor
     }
+    // Logback 제외하고 Log4j2 사용
+    all {
+        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+    }
 }
 
 repositories {
@@ -24,6 +28,9 @@ repositories {
 }
 
 dependencies {
+    // Log4j2
+    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
+
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
